arkts_static_test/08_Statements/ets_cases/8.9_for_of_Statements/compile-fail/STM_08_09_019_FAIL_external_variable_array_type_mismatch.ets
/*
* Copyright (c) 2021-2026 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/
/**
 * @id STM_08_09_019_FAIL_external_variable_array_type_mismatch
 * @expect compile-fail
 * @section 8.9
 * @design 外部声明变量类型int与迭代元素类型string不匹配（Array<string>迭代），应产生编译时错误
 * @note 元素类型string不能赋值给变量类型int，迭代Array<string>同样触发类型不匹配错误
 */
function testExternalVariableArrayTypeMismatch(): void {
    let arr: Array<string> = ["a", "b", "c"];
    let num: int = 0;
    for (num of arr) {
        console.log(num.toString());
    }
}
